@@ -101,7 +101,7 @@ public class RuleGSONParserTest {
 
         triggers = rule.getTriggers();
         assertThat(triggers, hasSize(2));
-        Trigger trigger = triggers.get(0);
+        Trigger trigger = triggers.getFirst();
         assertThat(trigger.getId(), is("2"));
         assertThat(trigger.getLabel(), is(emptyOrNullString()));
         assertThat(trigger.getDescription(), is(emptyOrNullString()));
@@ -118,7 +118,7 @@ public class RuleGSONParserTest {
 
         conditions = rule.getConditions();
         assertThat(conditions, hasSize(2));
-        Condition condition = conditions.get(0);
+        Condition condition = conditions.getFirst();
         assertThat(condition.getId(), is("3"));
         assertThat(condition.getLabel(), is(emptyOrNullString()));
         assertThat(condition.getDescription(), is(emptyOrNullString()));
@@ -137,7 +137,7 @@ public class RuleGSONParserTest {
 
         actions = rule.getActions();
         assertThat(actions, hasSize(2));
-        Action action = actions.get(0);
+        Action action = actions.getFirst();
         assertThat(action.getId(), is("1"));
         assertThat(action.getLabel(), is(emptyOrNullString()));
         assertThat(action.getDescription(), is(emptyOrNullString()));
@@ -183,7 +183,7 @@ public class RuleGSONParserTest {
 
         List<ConfigDescriptionParameter> configDescriptions = rule.getConfigurationDescriptions();
         assertThat(configDescriptions, hasSize(5));
-        ConfigDescriptionParameter parameter = configDescriptions.get(0);
+        ConfigDescriptionParameter parameter = configDescriptions.getFirst();
         assertThat(parameter.getName(), is("textParam"));
         assertThat(parameter.getLabel(), is("Text parameter"));
         assertThat(parameter.getDescription(), is("This is a text parameter."));
@@ -201,14 +201,14 @@ public class RuleGSONParserTest {
         assertFalse(parameter.getLimitToOptions());
         List<ParameterOption> options = parameter.getOptions();
         assertThat(options, hasSize(2));
-        assertThat(options.get(0).getLabel(), is("First Option"));
-        assertThat(options.get(0).getValue(), is("1st"));
+        assertThat(options.getFirst().getLabel(), is("First Option"));
+        assertThat(options.getFirst().getValue(), is("1st"));
         assertThat(options.get(1).getLabel(), is("Second Option"));
         assertThat(options.get(1).getValue(), is("2nd"));
         List<FilterCriteria> filterCriterias = parameter.getFilterCriteria();
         assertThat(filterCriterias, hasSize(2));
-        assertThat(filterCriterias.get(0).getName(), is("filter1"));
-        assertThat(filterCriterias.get(0).getValue(), is(".*"));
+        assertThat(filterCriterias.getFirst().getName(), is("filter1"));
+        assertThat(filterCriterias.getFirst().getValue(), is(".*"));
         assertThat(filterCriterias.get(1).getName(), is("filter2"));
         assertThat(filterCriterias.get(1).getValue(), is("a.*"));
         parameter = configDescriptions.get(1);
@@ -282,7 +282,7 @@ public class RuleGSONParserTest {
 
         List<Trigger> triggers = rule.getTriggers();
         assertThat(triggers, hasSize(2));
-        Trigger trigger = triggers.get(0);
+        Trigger trigger = triggers.getFirst();
         assertThat(trigger.getId(), is("first"));
         assertThat(trigger.getLabel(), is("First Trigger"));
         assertThat(trigger.getDescription(), is("The first trigger."));
@@ -299,7 +299,7 @@ public class RuleGSONParserTest {
 
         List<Condition> conditions = rule.getConditions();
         assertThat(conditions, hasSize(4));
-        Condition condition = conditions.get(0);
+        Condition condition = conditions.getFirst();
         assertThat(condition.getId(), is("holiday"));
         assertThat(condition.getLabel(), is("Is Holiday"));
         assertThat(condition.getDescription(), is("It must be a holiday."));
@@ -329,7 +329,7 @@ public class RuleGSONParserTest {
 
         List<Action> actions = rule.getActions();
         assertThat(actions, hasSize(2));
-        Action action = actions.get(0);
+        Action action = actions.getFirst();
         assertThat(action.getId(), is("greet"));
         assertThat(action.getLabel(), is("Greet"));
         assertThat(action.getDescription(), is("Greets the person."));
