@@ -65,7 +65,7 @@ public class TemplateGSONParserTest {
 
         List<ConfigDescriptionParameter> configDescriptions = template.getConfigurationDescriptions();
         assertThat(configDescriptions, hasSize(1));
-        ConfigDescriptionParameter parameter = configDescriptions.get(0);
+        ConfigDescriptionParameter parameter = configDescriptions.getFirst();
         assertThat(parameter.getName(), is("startLevel"));
         assertThat(parameter.getLabel(), is("Start Level"));
         assertThat(parameter.getDescription(), is("The start level which will trigger the rule."));
@@ -86,7 +86,7 @@ public class TemplateGSONParserTest {
 
         List<Trigger> triggers = template.getTriggers();
         assertThat(triggers, hasSize(2));
-        Trigger trigger = triggers.get(0);
+        Trigger trigger = triggers.getFirst();
         assertThat(trigger.getId(), is("3"));
         assertThat(trigger.getLabel(), is(emptyOrNullString()));
         assertThat(trigger.getDescription(), is(emptyOrNullString()));
@@ -103,7 +103,7 @@ public class TemplateGSONParserTest {
 
         List<Condition> conditions = template.getConditions();
         assertThat(conditions, hasSize(2));
-        Condition condition = conditions.get(0);
+        Condition condition = conditions.getFirst();
         assertThat(condition.getId(), is("4"));
         assertThat(condition.getLabel(), is(emptyOrNullString()));
         assertThat(condition.getDescription(), is(emptyOrNullString()));
@@ -122,7 +122,7 @@ public class TemplateGSONParserTest {
 
         List<Action> actions = template.getActions();
         assertThat(actions, hasSize(2));
-        Action action = actions.get(0);
+        Action action = actions.getFirst();
         assertThat(action.getId(), is("1"));
         assertThat(action.getLabel(), is(emptyOrNullString()));
         assertThat(action.getDescription(), is(emptyOrNullString()));
@@ -160,7 +160,7 @@ public class TemplateGSONParserTest {
 
         List<ConfigDescriptionParameter> configDescriptions = template.getConfigurationDescriptions();
         assertThat(configDescriptions, hasSize(5));
-        ConfigDescriptionParameter parameter = configDescriptions.get(0);
+        ConfigDescriptionParameter parameter = configDescriptions.getFirst();
         assertThat(parameter.getName(), is("textParam"));
         assertThat(parameter.getLabel(), is("Text parameter"));
         assertThat(parameter.getDescription(), is("This is a text parameter."));
@@ -178,14 +178,14 @@ public class TemplateGSONParserTest {
         assertFalse(parameter.getLimitToOptions());
         List<ParameterOption> options = parameter.getOptions();
         assertThat(options, hasSize(2));
-        assertThat(options.get(0).getLabel(), is("First Option"));
-        assertThat(options.get(0).getValue(), is("Welcome"));
+        assertThat(options.getFirst().getLabel(), is("First Option"));
+        assertThat(options.getFirst().getValue(), is("Welcome"));
         assertThat(options.get(1).getLabel(), is("Second Option"));
         assertThat(options.get(1).getValue(), is("Willkommen"));
         List<FilterCriteria> filterCriterias = parameter.getFilterCriteria();
         assertThat(filterCriterias, hasSize(2));
-        assertThat(filterCriterias.get(0).getName(), is("filter1"));
-        assertThat(filterCriterias.get(0).getValue(), is(".*"));
+        assertThat(filterCriterias.getFirst().getName(), is("filter1"));
+        assertThat(filterCriterias.getFirst().getValue(), is(".*"));
         assertThat(filterCriterias.get(1).getName(), is("filter2"));
         assertThat(filterCriterias.get(1).getValue(), is("a.*"));
         parameter = configDescriptions.get(1);
@@ -259,7 +259,7 @@ public class TemplateGSONParserTest {
 
         List<Trigger> triggers = template.getTriggers();
         assertThat(triggers, hasSize(2));
-        Trigger trigger = triggers.get(0);
+        Trigger trigger = triggers.getFirst();
         assertThat(trigger.getId(), is("first"));
         assertThat(trigger.getLabel(), is("First Trigger"));
         assertThat(trigger.getDescription(), is("The first trigger."));
@@ -276,7 +276,7 @@ public class TemplateGSONParserTest {
 
         List<Condition> conditions = template.getConditions();
         assertThat(conditions, hasSize(4));
-        Condition condition = conditions.get(0);
+        Condition condition = conditions.getFirst();
         assertThat(condition.getId(), is("holiday"));
         assertThat(condition.getLabel(), is("Is Holiday"));
         assertThat(condition.getDescription(), is("It must be a holiday."));
@@ -306,7 +306,7 @@ public class TemplateGSONParserTest {
 
         List<Action> actions = template.getActions();
         assertThat(actions, hasSize(2));
-        Action action = actions.get(0);
+        Action action = actions.getFirst();
         assertThat(action.getId(), is("greet"));
         assertThat(action.getLabel(), is("Greet"));
         assertThat(action.getDescription(), is("Greets the person."));
@@ -347,7 +347,7 @@ public class TemplateGSONParserTest {
 
         List<ConfigDescriptionParameter> configDescriptions = template.getConfigurationDescriptions();
         assertThat(configDescriptions, hasSize(3));
-        ConfigDescriptionParameter parameter = configDescriptions.get(0);
+        ConfigDescriptionParameter parameter = configDescriptions.getFirst();
         assertThat(parameter.getName(), is("consumption"));
         assertThat(parameter.getLabel(), is("Consumption Item"));
         assertThat(parameter.getDescription(), is("Data source for current consumption"));
@@ -367,8 +367,8 @@ public class TemplateGSONParserTest {
         assertThat(options, is(empty()));
         List<FilterCriteria> filterCriterias = parameter.getFilterCriteria();
         assertThat(filterCriterias, hasSize(1));
-        assertThat(filterCriterias.get(0).getName(), is("type"));
-        assertThat(filterCriterias.get(0).getValue(), is("Number"));
+        assertThat(filterCriterias.getFirst().getName(), is("type"));
+        assertThat(filterCriterias.getFirst().getValue(), is("Number"));
         parameter = configDescriptions.get(1);
         assertThat(parameter.getName(), is("light"));
         assertThat(parameter.getLabel(), is("Color Item"));
@@ -407,7 +407,7 @@ public class TemplateGSONParserTest {
 
         List<Trigger> triggers = template.getTriggers();
         assertThat(triggers, hasSize(1));
-        Trigger trigger = triggers.get(0);
+        Trigger trigger = triggers.getFirst();
         assertThat(trigger.getId(), is("trigger"));
         assertThat(trigger.getLabel(), is("Current consumption changes"));
         assertThat(trigger.getDescription(), is("Triggers whenever the current consumption changes its value"));
@@ -420,7 +420,7 @@ public class TemplateGSONParserTest {
 
         List<Action> actions = template.getActions();
         assertThat(actions, hasSize(1));
-        Action action = actions.get(0);
+        Action action = actions.getFirst();
         assertThat(action.getId(), is("setcolor"));
         assertThat(action.getLabel(), is("Change the light color"));
         assertThat(action.getDescription(),
@@ -444,7 +444,7 @@ public class TemplateGSONParserTest {
 
         configDescriptions = template.getConfigurationDescriptions();
         assertThat(configDescriptions, hasSize(6));
-        parameter = configDescriptions.get(0);
+        parameter = configDescriptions.getFirst();
         assertThat(parameter.getName(), is("itemTargetTime"));
         assertThat(parameter.getLabel(), is("Target Time (DateTime Item)"));
         assertThat(parameter.getDescription(), is(
@@ -545,7 +545,7 @@ public class TemplateGSONParserTest {
 
         triggers = template.getTriggers();
         assertThat(triggers, hasSize(1));
-        trigger = triggers.get(0);
+        trigger = triggers.getFirst();
         assertThat(trigger.getId(), is("1"));
         assertThat(trigger.getLabel(), is(emptyOrNullString()));
         assertThat(trigger.getDescription(), is(emptyOrNullString()));
@@ -558,7 +558,7 @@ public class TemplateGSONParserTest {
 
         actions = template.getActions();
         assertThat(actions, hasSize(1));
-        action = actions.get(0);
+        action = actions.getFirst();
         assertThat(action.getId(), is("2"));
         assertThat(action.getLabel(), is("Calculate & set the target brightness"));
         assertThat(action.getDescription(),
